# bakufu

./: .gitignore  .gitleaks.toml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  biome.json  docker-compose.override.yml  docker-compose.yml  justfile  lefthook.yml  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_init_audit_pid_outbox.py  0002_empire_aggregate.py  0003_workflow_aggregate.py  0004_agent_aggregate.py  0005_room_aggregate.py  0006_directive_aggregate.py  0007_task_aggregate.py  0008_external_review_gate_aggregate.py  0009_empire_archived.py  0010_workflow_archived.py  0011_stage_required_deliverables.py  0012_deliverable_template_aggregate.py  0013_add_room_role_overrides.py  0014_external_review_gate_criteria.py  0015_deliverable_records.py  0016_internal_review_gate.py
backend/src/bakufu/: __init__.py  main.py
backend/src/bakufu/application/: __init__.py
backend/src/bakufu/domain/: __init__.py  empire.py  events.py  exceptions.py  value_objects.py  workflow.py
backend/src/bakufu/domain/agent/: __init__.py  (+4 more)
backend/src/bakufu/infrastructure/: __init__.py  bootstrap.py  event_bus.py  exceptions.py
backend/tests/: test_smoke.py
backend/tests/acceptance/: conftest.py  fake_llm_provider.py  test_sc_mvp_001_vmodel_fullflow.py  test_sc_mvp_002_rejection_roundtrip.py
backend/tests/architecture/: __init__.py  test_masking_columns.py
backend/tests/characterization/: test_llm_client_characterization.py
backend/tests/docs/: test_storage_md_back_index.py
backend/tests/domain/: __init__.py  test_empire.py  test_value_objects.py  test_value_objects_workflow.py  test_workflow.py
backend/tests/domain/agent/: __init__.py  conftest.py  test_application_responsibility.py  test_archive.py  test_construction.py  test_frozen_extra.py  test_helpers_independence.py  test_integration.py  test_invariants.py  test_msg_wording.py  test_mutators.py  test_persona.py  test_provider_config.py  test_skillref_path.py
backend/tests/domain/directive/: test_application_responsibility.py  test_construction.py  test_frozen_extra.py  test_helpers_independence.py  test_integration.py  test_link_task.py  test_msg_wording.py  test_webhook_masking.py
backend/tests/domain/internal_review_gate/: test_integration.py
backend/tests/domain/room/: test_application_responsibility.py  test_archive.py  test_construction.py  test_frozen_extra.py  test_helpers_independence.py  test_integration.py  test_invariants.py  test_msg_wording.py  test_mutators.py  test_prompt_kit.py  test_webhook_masking.py
backend/tests/domain/workflow/: __init__.py  test_construction.py  test_dag_invariants.py  test_from_dict.py  test_frozen_extra.py  test_helpers_independence.py  test_integration.py  test_mutators.py  test_notify_channel_kind.py  test_notify_channel_masking.py  test_notify_channel_ssrf.py  test_required_deliverables.py  test_value_objects.py
backend/tests/e2e/: conftest.py  test_directive_task_http_api.py  test_empire_http_api.py  test_external_review_gate_http_api.py  test_room_http_api.py
backend/tests/factories/: __init__.py  agent.py  db.py  deliverable_record.py  deliverable_template.py  directive.py  domain_event_factory.py  empire.py  external_review_gate.py  internal_review_gate.py  llm_client.py  llm_provider_error.py  llm_sdk_response.py  persistence_rows.py  psutil_process.py  room.py  stub_llm_provider.py  task.py  workflow.py
backend/tests/infrastructure/: conftest.py  test_bootstrap_cleanup.py  test_bootstrap_sequence.py
backend/tests/infrastructure/config/: test_data_dir.py
backend/tests/infrastructure/security/: test_masking.py
backend/tests/infrastructure/storage/: test_attachment_root.py
backend/tests/infrastructure/validation/: test_json_schema_validator.py
backend/tests/integration/: conftest.py  test_admin_cli.py  test_admin_service.py  test_empire_http_api.py  test_external_review_gate_http_api.py  test_http_api_foundation_http_api.py  test_internal_review_gate_application.py  test_room_http_api.py  test_stage_executor_application.py  test_stage_worker_recovery.py  test_websocket_broadcast_domain.py  test_websocket_broadcast_http_api.py
backend/tests/integration/application/: conftest.py  test_validation_service_integration.py
backend/tests/integration/migrations/: conftest.py  test_migration_0015.py
backend/tests/integration/test_agent_http_api/: conftest.py  helpers.py  test_archive.py  test_get.py  test_hire.py  test_list.py  test_security.py  test_update.py
backend/tests/integration/test_deliverable_template_http_api/: conftest.py  test_create.py  test_delete.py  test_read.py  test_update.py
backend/tests/unit/: test_a09_aivm.py  test_admin_cli_formatter.py  test_admin_service.py  test_deliverable_template_service.py  test_empire_http_api.py  test_http_api_foundation_http_api.py  test_internal_review_gate_executor.py  test_internal_review_service.py  test_msg_aivm.py  test_role_profile_service.py  test_room_http_api.py  test_stage_executor_application.py  test_websocket_broadcast_domain.py  test_websocket_broadcast_http_api.py
(+864 files in other folders)
