[project]
name = "bakufu"
version = "0.0.0"
description = "AI agent empire orchestrator with external review gate"
requires-python = ">=3.12"
dependencies = ["bakufu-backend"]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.1.0",
    "httpx>=0.25",
    "ruff>=0.15.12",
]

[tool.uv.sources]
bakufu-backend = { workspace = true }

[tool.uv.workspace]
members = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["frontend"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "PTH", # flake8-use-pathlib
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "RUF001",  # Japanese full-width parentheses in string literals are intentional
    "RUF002",  # Japanese full-width parentheses in docstrings are intentional
    "RUF003",  # Japanese full-width parentheses in comments are intentional
]

[tool.ruff.lint.per-file-ignores]
# テスト docstring は「TC-ID + 日本語サマリー + 括弧説明」で構造的に長く、
# 多行 docstring は行末 noqa を付けられないためテスト配下のみ E501 を緩和する。
# プロダクションコード (backend/src) には引き続き 100 文字制限を適用。
"backend/tests/**/*.py" = ["E501"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["backend/src", "backend/tests"]
exclude = ["**/node_modules", "**/__pycache__", "frontend"]
extraPaths = ["backend/src", "backend"]
# Resolve third-party type stubs (sqlalchemy, alembic, psutil) from the
# uv-managed workspace virtualenv. Without this, `uv tool install pyright`
# (used by scripts/setup.sh in CI) creates an isolated env that cannot
# see the project's site-packages.
venvPath = "."
venv = ".venv"

# テストコードは Mock/AsyncMock を多用するため strict 型チェックと構造的に不整合
# （Mock 属性は動的に生成される、private 属性アクセスは white-box テストの常套手段、
#   pytest autouse fixture は宣言的に呼ばれるため pyright からは未参照に見える）。
# プロダクションコード (backend/src) には引き続き strict を適用。
[[tool.pyright.executionEnvironments]]
root = "backend/tests"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportMissingParameterType = "none"
reportMissingTypeArgument = "none"
reportAttributeAccessIssue = "none"
reportPrivateUsage = "none"
reportArgumentType = "none"
reportGeneralTypeIssues = "none"
reportUnusedFunction = "none"
reportInvalidTypeForm = "none"
reportCallIssue = "none"
