[project]
name = "bakufu-backend"
version = "0.0.0"
description = "bakufu backend: FastAPI + SQLAlchemy + SQLite"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "psutil>=6.0",
    "greenlet>=3.0",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bakufu"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.25",
    "ruff>=0.15.12",
    "pyright>=1.1.409",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
